Fix spacing in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 
 .project .row {
   display: flex;
-  margin: 10px 0 60px 0;
+  margin: 60px 0 60px 0;
 }
 
 .project .col {
@@ -91,6 +91,17 @@ footer span {
   color: var(--primary-color);
 }
 
+.mobile {
+  display: none;
+}
+
+.status-text {
+  font-size: 12px;
+  margin-left: 10px;
+  font-style: italic;
+  color: #d9512c;
+}
+
 @media only screen and (max-width: 600px) {
   .project {
     margin-top: 40px;
@@ -98,8 +109,17 @@ footer span {
   }
 
   .project .row {
+    margin-top: 30px;
     display: flex;
     flex-direction: column-reverse;
+  }
+
+  .col h2 {
+    margin-top: 30px;
+  }
+
+  .project .col p {
+    margin-right: 0;
   }
 
   .col img {
@@ -116,6 +136,7 @@ footer span {
 
   .mobile {
     margin-left: 80px;
+    display: block;
   }
 
   .header > h1 {
