--- a/src/Header.css
+++ b/src/Header.css
@@ -21,3 +21,13 @@
   margin-top: 10px;
   font-size: 21px;
 }
+
+@media only screen and (max-width: 600px) {
+  .header {
+    height: 35vh;
+  }
+
+  .header h1 {
+    padding-top: 80px;
+  }
+}
